; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_sei.c_decode_nal_sei_message.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_hevc_sei.c_decode_nal_sei_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"Decoding SEI\0A\00", align 1
@INT_MAX = common dso_local global i32 0, align 4
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@HEVC_NAL_SEI_PREFIX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*, i32*, i32)* @decode_nal_sei_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_nal_sei_message(i32* %0, i8* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 0, i32* %12, align 4
  store i32 0, i32* %13, align 4
  store i32 255, i32* %14, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* @AV_LOG_DEBUG, align 4
  %17 = call i32 @av_log(i8* %15, i32 %16, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %32, %5
  %19 = load i32, i32* %14, align 4
  %20 = icmp eq i32 %19, 255
  br i1 %20, label %21, label %38

21:                                               ; preds = %18
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 @get_bits_left(i32* %22)
  %24 = icmp slt i32 %23, 16
  br i1 %24, label %30, label %25

25:                                               ; preds = %21
  %26 = load i32, i32* %12, align 4
  %27 = load i32, i32* @INT_MAX, align 4
  %28 = sub nsw i32 %27, 255
  %29 = icmp sgt i32 %26, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %25, %21
  %31 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %31, i32* %6, align 4
  br label %78

32:                                               ; preds = %25
  %33 = load i32*, i32** %7, align 8
  %34 = call i32 @get_bits(i32* %33, i32 8)
  store i32 %34, i32* %14, align 4
  %35 = load i32, i32* %14, align 4
  %36 = load i32, i32* %12, align 4
  %37 = add nsw i32 %36, %35
  store i32 %37, i32* %12, align 4
  br label %18

38:                                               ; preds = %18
  store i32 255, i32* %14, align 4
  br label %39

39:                                               ; preds = %53, %38
  %40 = load i32, i32* %14, align 4
  %41 = icmp eq i32 %40, 255
  br i1 %41, label %42, label %59

42:                                               ; preds = %39
  %43 = load i32*, i32** %7, align 8
  %44 = call i32 @get_bits_left(i32* %43)
  %45 = sext i32 %44 to i64
  %46 = load i32, i32* %13, align 4
  %47 = sext i32 %46 to i64
  %48 = mul nsw i64 8, %47
  %49 = add nsw i64 8, %48
  %50 = icmp slt i64 %45, %49
  br i1 %50, label %51, label %53

51:                                               ; preds = %42
  %52 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %52, i32* %6, align 4
  br label %78

53:                                               ; preds = %42
  %54 = load i32*, i32** %7, align 8
  %55 = call i32 @get_bits(i32* %54, i32 8)
  store i32 %55, i32* %14, align 4
  %56 = load i32, i32* %14, align 4
  %57 = load i32, i32* %13, align 4
  %58 = add nsw i32 %57, %56
  store i32 %58, i32* %13, align 4
  br label %39

59:                                               ; preds = %39
  %60 = load i32, i32* %11, align 4
  %61 = load i32, i32* @HEVC_NAL_SEI_PREFIX, align 4
  %62 = icmp eq i32 %60, %61
  br i1 %62, label %63, label %71

63:                                               ; preds = %59
  %64 = load i32*, i32** %7, align 8
  %65 = load i8*, i8** %8, align 8
  %66 = load i32*, i32** %9, align 8
  %67 = load i32*, i32** %10, align 8
  %68 = load i32, i32* %12, align 4
  %69 = load i32, i32* %13, align 4
  %70 = call i32 @decode_nal_sei_prefix(i32* %64, i8* %65, i32* %66, i32* %67, i32 %68, i32 %69)
  store i32 %70, i32* %6, align 4
  br label %78

71:                                               ; preds = %59
  %72 = load i32*, i32** %7, align 8
  %73 = load i8*, i8** %8, align 8
  %74 = load i32*, i32** %9, align 8
  %75 = load i32, i32* %12, align 4
  %76 = load i32, i32* %13, align 4
  %77 = call i32 @decode_nal_sei_suffix(i32* %72, i8* %73, i32* %74, i32 %75, i32 %76)
  store i32 %77, i32* %6, align 4
  br label %78

78:                                               ; preds = %71, %63, %51, %30
  %79 = load i32, i32* %6, align 4
  ret i32 %79
}

declare dso_local i32 @av_log(i8*, i32, i8*) #1

declare dso_local i32 @get_bits_left(i32*) #1

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @decode_nal_sei_prefix(i32*, i8*, i32*, i32*, i32, i32) #1

declare dso_local i32 @decode_nal_sei_suffix(i32*, i8*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
